--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ social:
 
   - name: GitHub
     icon: github
-    username: bencentra
+    username: jskim
     url: https://github.com/zzzzzkjs
     desc: Fork me on GitHub
     share: false
