--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 baseurl: "/centrarium" # the subpath of your site, e.g. /blog/
-url: "http://bencentra.github.io" # the base hostname & protocol for your site
+url: "http://zzzzzkjs.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
@@ -86,7 +86,7 @@ social:
 
   - name: GitHub
     icon: github
-    username: jskim
+    username: zzzzzkjs
     url: https://github.com/zzzzzkjs
     desc: Fork me on GitHub
     share: false
