--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ instagram_username:  zzzzzkjs
 linkedin_username:
 
 # Add your google-analytics ID here to activate google analytics
-google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
+google_analytics:   G-X16LVK2ZV8 # out your google-analytics code
 
 # Build settings
 markdown:           kramdown
